# goobervault

./: .env.example  .gas-snapshot  .gitignore  .gitmodules  .solhint.json  LICENSE  Makefile  README.md  foundry.toml  litepaper.md  output.txt  package.json  pyproject.toml  remappings.txt  setup_anvil.sh  slither.config.json
.github/workflows/: CI.yml
script/: DeployGoober.s.sol
src/: ERC20Upgradable.sol  Goober.sol  GooberPeriphery.sol
src/interfaces/: IBeacon.sol  IERC165.sol  IERC1822.sol  IERC20.sol  IERC3156FlashBorrower.sol  IERC3156FlashLender.sol  IERC721Receiver.sol  IGoober.sol  IGooberCallee.sol
src/introspection/: ERC165.sol
src/libraries/: Address.sol  StorageSlot.sol
src/math/: UQ112x112.sol
src/proxy/: ERC1967Proxy.sol  ERC1967Upgrade.sol  Proxy.sol  UUPSUpgradeable.sol
src/security/: Pausable.sol  ReentrancyGuard.sol
src/tokens/: ERC20.sol  ERC20Upgradable.sol
src/utils/: Context.sol  Initializable.sol  Ownable.sol
src/v2/: Goober.sol
src/v2/interfaces/: IGoober.sol  (+1 more)
test/: Goober.fuzz.t.sol  Goober.integration.t.sol  Goober.invariants.t.sol  Goober.other.t.sol  Goober.t.sol  Goober.unit.t.sol  GooberPeriphery.t.sol
test/actors/: Admin.sol  InvariantActor.sol  Timekeeper.sol  User.sol  Warper.sol
test/mocks/: MockERC721.sol
test/utils/: GooberTest.sol
test/v2/: 1-Deposit.unit.t.sol  2-Withdraw.unit.t.sol  3-Swap.unit.t.sol  4-Accounting.unit.t.sol  5-Fees.unit.t.sol  6-Admin.unit.t.sol  Goober.unit.t.sol  Unit.Deposit.t.sol  Unit.DepositWithdraw.t.sol  Unit.Initial.t.sol  Unit.Swap.t.sol  Unit.Withdraw.t.sol
(+5 files in other folders)
