[tool.poetry]
name = "goobervault"
version = "0.1.0"
description = ""
authors = ["Alcibiades <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slither-analyzer = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
